After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 795494 - Gdm hangs when unknown command line options are passed.
Gdm hangs when unknown command line options are passed.
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.28.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-23 23:51 UTC by Scott Cohen
Modified: 2018-04-24 20:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The aforementioned patch. (1.04 KB, patch)
2018-04-23 23:55 UTC, Scott Cohen
committed Details | Review

Description Scott Cohen 2018-04-23 23:51:53 UTC
When using unknown command line options with gdm, the program hangs until manually terminated. This is caused by g_option_context_set_ignore_unknown_options (context, TRUE) in the main function. This can be remedied by either changing TRUE to FALSE or by removing the line entirely as by default g_option_context_parse() treats unknown options as errors.
Comment 1 Scott Cohen 2018-04-23 23:55:02 UTC
Created attachment 371305 [details] [review]
The aforementioned patch.
Comment 2 Ray Strode [halfline] 2018-04-24 20:35:59 UTC
Thanks