daemon: Don't call g_option_context_set_ignore_unknown_options

When using unknown command line options with the GDM daemon, the
program hangs until explicitly getting killed.

This commit addresses that bug by dropping an unnecessary call to
g_option_context_set_ignore_unknown_options, so GOptionContext will
now give an error when encountering unknown options.

https://bugzilla.gnome.org/show_bug.cgi?id=795494